# ds-u2-actividad-1b-listasenlazadassimples-Carlos-Guerrero-Salazar-a-7

./: CMakeLists.txt  Doxyfile.in  README.md
arduino/random_int_o_float_copy_20251029071858/: random_int_o_float_copy_20251029071858.ino
doc/html/: ListaGeneral_8h_source.html  SensorBase_8h.html  SensorTemperatura_8h_source.html  classArduinoSerial.html  classSensorBase.html  classSensorTemperatura-members.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  random__int__o__float__copy__20251029071858_8ino_source.html  structListaGeneral_1_1Nodo.html
doc/html/search/: all_2.js  all_9.js  classes_3.js  functions_8.js  variables_2.js
include/: ArduinoSerial.h  ListaGeneral.h  ListaSensor.h  Lista_Sensor.h  SensorBase.h  SensorBase3.h  SensorPresion.h  SensorTemperatura.h
src/: ArduinoSerial.cpp  SensorBase.cpp  SensorPresion.cpp  SensorTemperatura  SensorTemperatura.cpp  arduinoSerial.cpp  generaarduino.cpp  main.cpp
